sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:30: error: not found: value b
	while(b) {
              ^AlgCocktailSort2:31: error: not found: value b
		b=false;
                ^AlgCocktailSort2:35: error: not found: value b
				b=true;
                                ^AlgCocktailSort2:42: error: not found: value b
				b=true;
                                ^